# RepoPilot

./: .env.example  .gitignore  README.md  RepoPilot-PRD.md  compose.yaml  pyproject.toml  开发计划.md
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  styles.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: RepoPilot-v2-最小闭环优化设计.md  企业级编程助手平台架构.md  插件包规范与学习实验.md  阶段三-项目注册与RAG.md  阶段二-隔离工作区与权限模式.md  阶段四-LangGraph只读研究工作流.md
evaluation/: README.md  RESULTS.md  tasks.json
examples/: mcp.echo.arguments.json  mcp.example.toml  mcp.local-echo.toml
scripts/: build-desktop-backend-sidecar.ps1  repopilot_sidecar.py  start-desktop-preview.ps1
src/repopilot_guard/: __init__.py  __main__.py  api.py  cancellation.py  capabilities.py  cli.py  config.py  context.py  context_broker.py  coordinator.py  document_indexing.py  evaluation.py  evidence.py  execution.py  graph.py  mcp.py  mcp_agent.py  mcp_runtime.py  models.py  permissions.py  plugins.py  policy.py  preflight.py  project_diagnostics.py  project_registry.py  providers.py  qdrant_bootstrap.py  recipes.py  repository_tools.py  skills.py  state_machine.py  task_export.py  task_progress.py  task_store.py  tool_runtime.py  workspace.py
tests/: __init__.py  test_api.py  test_capability_platform.py  test_cli_product.py  test_context_broker.py  test_coordinator.py  test_evaluation_catalog.py  test_execution.py  test_mcp_agent.py  test_mcp_graph_binding.py  test_mcp_runtime.py  test_phase_four.py  test_phase_one.py  test_phase_three.py  test_plugins.py  test_policy.py  test_qdrant_client_config.py  test_runtime_foundation.py  test_state_machine.py  test_task_progress.py  test_task_store.py  test_workspace_tools.py
tests/fixtures/: mcp_echo_server.py  mcp_http_server.py
(+4 files in other folders)
