[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot-guard"
version = "0.1.0"
description = "A safe, auditable coding agent for repository maintenance."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
  { name = "RepoPilot Guard Contributors" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.139.0",
    "jsonschema>=4.26.0,<5",
    "uvicorn>=0.35.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp>=1.28.1,<2",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
]

[project.scripts]
repopilot-guard = "repopilot_guard.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
